--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -2,10 +2,11 @@
 
 .footer {
   padding-block: 18rem 10rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  // flex-direction: column;
+  // align-items: center;
+  justify-items: center;
+  // width: 50rem;
   gap: 6rem;
 
   @include respond(tab-land) {
@@ -17,14 +18,22 @@
     margin-bottom: 8rem;
   }
 
+  &__logo-box {
+    margin-left: 2.5rem;
+  }
+
   &__socials {
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
+
     gap: 3rem;
   }
 
   &__socials-icon {
+    display: inline-block;
     transition: filter 0.2s ease 0s;
     &:hover {
       filter: contrast(200%);
